test/failing/badintfield2.trunnel

struct x {
   u8 a[2];
   u8 b[a];
}
